Prevent overlap when using ITS theme (#23)

--- a/src/component/statistics/statistics.module.scss
+++ b/src/component/statistics/statistics.module.scss
@@ -23,6 +23,7 @@
 
         .number {
             font-size: 3rem;
+            line-height: 3.5rem;
         }
     }
 }
